--- a/static/html/main.html
+++ b/static/html/main.html
@@ -4,20 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="static/img/favicon.svg" type="image/svg">
     <title>Подбор профессии по типу личности</title>
     <link href="static/css/main.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div class="div">
+    <div class="logo"><a class="logo_a" href="https://mobiusclass.ru/"><img class="logo_img" src="./static\img\logo.png"></a></div>
+    <div class="start_h1">
         <h1>Привет, хочешь узнать свою <span>будущую профессию</span> и <span>тип</span> <span>личности</span>? Тебе
             сюда.</h1>
     </div>
     <div class="intelect">
-        <p>Что такое тип интеллекта?</p1>
+        <p>Что такое тип интеллекта?</p>
         <p>Существует 9 видов интеллекта, не зависящих один от другого и действующих каждый по своим правилам. Именно множественный характер интеллекта позволяет людям принимать такие различные роли, как роль врача, музыканта, водителя и певца.</p>
     </div>
-    <a href="../../test">Начать тест</a>
+    <a href="/test">Начать тест</a>
 
 </body>
 
